Utilizando containers y components para ordenar los componentes de la aplicación

--- a/src/playlist/components/playlist.css
+++ b/src/playlist/components/playlist.css
@@ -1,7 +1,10 @@
 .Playlist {
 	display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-height: 235px;
-    overflow: hidden;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: flex-start;
+	max-height: 235px;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	width: 100%;
 }
